--- a/recipes/butterchicken.html
+++ b/recipes/butterchicken.html
@@ -11,7 +11,9 @@
 
         <h3>Description</h3>
 
-        <p>Traditionally known as Murgh Makhani, Butter Chicken is one of, if not the most popular curries found around the world. Consisting of tomato, butter, and cream, its sauce is known for being rich in flavour and creamy in texture.</p>
+        <p>Traditionally known as Murgh Makhani, Butter Chicken is one of, if not the most popular curries found around the world. Consisting of tomato, butter, various spices, and cream, its sauce is known for being rich in flavour and creamy in texture.</p>
+
+        <p>Macros: 580kcal, 36g protein, 41g fat, 17g Carbs per serving</p>
 
         <h3>Ingredients</h3>
 
@@ -47,8 +49,16 @@
 
         <h3>Steps</h3>
         <ol>
-
+            <li>In a bowl, combine chicken with all of the ingredients for the chicken marinade; let marinate for 30 minutes to an hour (or overnight if time allows).</li>
+            <li>Heat oil in a large skillet or pot over medium-high heat. When sizzling, add chicken pieces in batches of two or three, making sure not to crowd the pan. Fry until browned for only 3 minutes on each side. Set aside and keep warm. You will finish cooking the chicken in the sauce.</li>
+            <li>Heat butter or ghee in the same pan. Fry the onions until they start to sweat (about 6 minutes) while scraping up any browned bits stuck on the bottom of the pan.</li>
+            <li>Add garlic and ginger and sauté for 1 minute until fragrant, then add ground coriander, cumin and garam masala. Let cook for about 20 seconds until fragrant, while stirring occasionally.</li>
+            <li>Add crushed tomatoes, chili powder and salt. Let simmer for about 10-15 minutes, stirring occasionally until sauce thickens and becomes a deep brown red color.</li>
+            <li>Remove from heat, scoop mixture into a blender and blend until smooth. You may need to add a couple tablespoons of water to help it blend (up to 1/4 cup). Work in batches depending on the size of your blender.</li>
+            <li>Pour the puréed sauce back into the pan. Stir the cream, sugar and crushed kasoori methi (or fenugreek leaves) through the sauce. Add the chicken with juices back into the pan and cook for an additional 8-10 minutes until chicken is cooked through and the sauce is thick and bubbling.</li>
+            <li>Garnish with chopped cilantro and serve with fresh, warm rice and Naan bread.</li>
         </ol>
+        Credit to Karina at <a href="https://cafedelites.com/butter-chicken/">cafedelites.com</a>
     </body>
 
 </html>
