Add link to return to Recipes home page

--- a/recipes/butterchicken.html
+++ b/recipes/butterchicken.html
@@ -58,7 +58,9 @@
             <li>Pour the puréed sauce back into the pan. Stir the cream, sugar and crushed kasoori methi (or fenugreek leaves) through the sauce. Add the chicken with juices back into the pan and cook for an additional 8-10 minutes until chicken is cooked through and the sauce is thick and bubbling.</li>
             <li>Garnish with chopped cilantro and serve with fresh, warm rice and Naan bread.</li>
         </ol>
-        Credit to Karina at <a href="https://cafedelites.com/butter-chicken/">cafedelites.com</a>
+        <p>Credit to Karina at <a href="https://cafedelites.com/butter-chicken/">cafedelites.com</a></p>
+        <p><a href="../index.html">Home</a></p>
+
     </body>
 
 </html>
