Add image of bread to body

--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -7,5 +7,8 @@
 
     <body>
         <h1>No Kneed Sourdough Bread</h1>
+        <img src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image_2x/public/recipe_legacy/19928-3-large_0.jpg?itok=o6K1eX--" width="500" alt="sourdough bread loaf">
+
+        
     </body>
 </html>
