Finish body with recipe information

--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -9,6 +9,41 @@
         <h1>No Kneed Sourdough Bread</h1>
         <img src="https://www.kingarthurbaking.com/sites/default/files/styles/featured_image_2x/public/recipe_legacy/19928-3-large_0.jpg?itok=o6K1eX--" width="500" alt="sourdough bread loaf">
 
-        
+        <h3>Description</h3>
+
+        <p>Characterized by its crusty, chewy texture, robust sourdough flavor, and rich golden color, this sourdough loaf has become a favorite in our test kitchen. It relies entirely on its starter for leavening; but with an active, bubbly starter, a little bit of patience, and minimal effort, you’ll be amazed by this stunning, delicious loaf.</p>
+
+        <h3>Ingredients</h3>
+
+        <ul>
+            <li>1 Cup (227g) ripe (fed) sourdough starter</li>
+            <li>1 3/4 cups (397g) water, lukewarm</li>
+            <li>5 cups (600g) unbleached bread flour</li>
+            <li>1 tablespoon (18g) salt</li>
+            <li>2 teaspoons diastatic malt powder, optional for a more golden color and stronger rise</li>
+        </ul>
+
+        <h3>Steps</h3>
+
+        <ol>
+            <li>Weigh your flour; or measure it by gently spooning it into a cup, then sweeping off any excess.</li>
+            <li>Combine all the ingredients in a large mixing bowl, or a large (6-quart) food-safe plastic bucket.</li>
+            <li>Mix and stir everything together to make a sticky, rough dough. If you have a stand mixer, beat at medium speed with the paddle attachment for 30 to 60 seconds. If you don't have a mixer, just stir with a big spoon or dough whisk until everything is combined.</li>
+            <li>Leave the dough in the bucket or 6-quart bowl, cover it with the bucket’s lid or a piece of plastic wrap, and let it rise for 1 hour.</li>
+            <li>Gently pick up the dough and fold it over on itself several times, cover it again, and let it rise for another hour.</li>
+            <li>Repeat the rising-folding process one more time (for a total of 3 hours), folding it again after the last hour. Then, place the bucket or bowl in the refrigerator, and let the dough rest for at least 8 hours (or up to 48 hours).</li>
+            <li>When you're ready to make bread, turn the dough out onto a well-floured work surface, and shape it into a rough ball. Leave the dough seam-side up, cover it, and let it rest on a floured surface for 15 minutes.</li>
+            <li>Next, shape the dough to fit the vessel in which you’ll bake it: a 13” log for a 13" pain de mie pan or long covered baker, such as our glazed long covered baker; or a large boule (round) for a round baker or Dutch oven, such as our bread baking crock. Place the shaped dough into the lightly greased or semolina-dusted base of the baker and cover it with the lid.</li>
+            <li>Let the loaf warm to room temperature and rise; this should take about 2 1/2 to 3 hours. It won't appear to rise upwards that much, but will relax and expand.</li>
+            <li>With a rack positioned in the middle, start preheating the oven to 500°F one hour before you’re ready to bake.</li>
+            <li>Just before baking, dust the loaf with a fine coat of flour and use a lame or a sharp knife to make one or several 1/2” deep slashes through its top surface. If you're baking a long loaf, one arched slash down the loaf lengthwise is nice, or if baking a round, a crosshatch or crisscross pattern works well.</li>
+            <li>Cover the baker with its lid and place it in the oven. (If you're using a pain de mie pan, leave the lid off.) Reduce the oven temperature to 450°F and bake the bread for 45 minutes.</li>
+            <li>Remove the cover of the baker and bake the bread for 10 to 15 minutes longer, until the bread is deep golden brown and crusty, and a digital thermometer inserted into the center of the loaf reads at least 210°F.</li>
+            <li>Remove the bread from the oven and transfer it to a rack to cool completely.</li>
+            <li>Store leftover bread in a plastic bag at room temperature for several days; freeze for longer storage.</li>
+        </ol>
+        <p>Credit to <a href="https://www.kingarthurbaking.com/recipes/no-knead-sourdough-bread-recipe">King Arthur Flour</a></p>
+        <p><a href="../index.html">Home</a></p>
+
     </body>
 </html>
