--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/butterchicken.html">Butter Chicken</a>
+        <ul>
+        <li><a href="recipes/butterchicken.html">Butter Chicken</a></li>
+        <li><a href="recipes/bread.html">No Kneed Sourdough Bread</a></li>
+        </ul>
     </body>
 </html>
