Finish adding body content

--- a/recipes/scallionpancakes.html
+++ b/recipes/scallionpancakes.html
@@ -16,18 +16,35 @@
 
         <h4>Pancakes</h4>
             <ul>
+                <li>2 1/2 cups all-purpose flour, plus more for working surface</li>
+                <li>Kosher salt</li>
+                <li>1 tablespoon toasted sesame oil</li>
+                <li>1/3 cup chicken fat warmed, or vegetable oil</li>
+                <li>2 bunches scallions, thinly slices (about 2 cups)</li>
+                <li>8 tablespoons vegetable oil, divided, plus for brushing</li>
             </ul>
         <h4>Sauce</h4>
             <ul>
+                <li>3 tablespoons unseasoned rice vinegar</li>
+                <li>2 tablespoons soy sauce</li>
+                <li>1 teaspoon chili oil</li>
+                <li>1/2 teaspoon sugar</li>
+                <li>1/4 teaspoon crushed red pepper flakes</li>
             </ul>
 
         <h3>Steps</h3>
 
         <h4> Pancakes</h4>
             <ol>
+                <li>Whisk 2½ cups flour and 1 tsp. salt in a large bowl. Mix in sesame oil and 1 cup boiling water with a wooden spoon until a shaggy dough forms.</li>
+                <li>Turn out dough onto a lightly floured surface and knead, adding flour as needed to prevent sticking, until dough is smooth, about 5 minutes. Cover; let rest at room temperature 1 hour.</li>
+                <li>Divide dough into 8 pieces. Working with one at a time, roll out on a lightly floured work surface as thin as possible (each should be approximately 10" in diameter). Brush about 2 tsp. chicken fat on dough and top with about ¼ cup scallions; season with salt. Roll dough away from you (like a jelly roll) into a thin cylinder, then, starting at 1 end, wind roll onto itself to create a coil (like a cinnamon roll). Cover and repeat with remaining dough. Let rest at room temperature 15 minutes.</li>
+                <li>Working with 1 coil at a time, roll out on a lightly floured surface to a 5" round (keep other coils covered). Repeat with remaining dough and stack as you go, separating with parchment or lightly greased foil brushed with vegetable oil.</li>
+                <li>Heat 1 Tbsp. vegetable oil in a medium skillet over medium-low. Working with one at a time, cook pancake, turning frequently to prevent scallions from burning, until golden brown and crisp on both sides and cooked through, 8–10 minutes. Transfer pancakes to a wire rack and let rest about 5 minutes before cutting into wedges.</li>
             </ol>
         <h4>Sauce</h4>
             <ol>
+                <li>Whisk vinegar, soy sauce, chili oil, sugar, and red pepper flakes in a small bowl until sugar is dissolved. Serve alongside pancakes for dipping.</li>
             </ol>
 
 <p>Credit to Sue Li at <a href="https://www.bonappetit.com/recipe/scallion-pancakes-2">Bon Appetit</a></p>
