--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <img src="https://media.architecturaldigest.com/photos/62154614ce63dd788a528f77/16:9/w_2560%2Cc_limit/GettyImages-1277369090.jpg" width="400" alt="ringe range">
+
         <ul>
         <li><a href="recipes/butterchicken.html">Butter Chicken</a></li>
         <li><a href="recipes/bread.html">No Kneed Sourdough Bread</a></li>
+        <li><a href="recipes/scallionpancakes.html">Scallion Pancakes</a></li>
         </ul>
     </body>
 </html>
